# ur-solution

./: .gitignore  Cargo.toml  README.md
src/: game.rs  main.rs  play.rs  render.rs  save.rs  solve.rs  successor.rs
src/game/: mod.rs  strip.rs
src/solve/: converge.rs  converge.wgsl  converge_gpu.rs  expr.rs  expr.wgsl  mapping.rs  mod.rs  order.rs  perma.rs  shader.wgsl  table.rs  table_gpu.rs
