[package]
name = "ur-solution"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.14.0"
rayon = "1.10.0"
bytemuck = "1.22.0"
env_logger = "0.11"
pollster = "0.4"
wgpu = "25.0.0"
rustc-hash = "2.1.1"
serde = { version="1.0.219", features = ["derive"] }
bincode = "2.0.1"
rand = "0.9.1"


[profile.profiling]
inherits = "release"
debug = true
